--- a/index.html
+++ b/index.html
@@ -5,7 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Become a Brilliant Plus Ambassador</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCvFnRxrxBTXAaOa4njvLSAubLxkJM0tbA&libraries=places"></script>
+    <script src="maps-config.js"></script>
+    <script>
+        // Load Google Maps API dynamically
+        function loadGoogleMapsAPI() {
+            const script = document.createElement('script');
+            script.src = `https://maps.googleapis.com/maps/api/js?key=${MAPS_CONFIG.API_KEY}&libraries=places`;
+            script.async = true;
+            script.defer = true;
+            document.head.appendChild(script);
+        }
+        loadGoogleMapsAPI();
+    </script>
 </head>
 <body>
     <div class="container">
