fix: Update API integration to match successful curl implementation

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 </head>
 <body>
     <div class="container">
+        <div id="messageContainer" class="mt-3"></div>
         <div class="form-container">
             <button class="close-button">×</button>
             <div class="two-column-layout">
