--- a/index.html
+++ b/index.html
@@ -22,12 +22,11 @@
     <div class="container">
         <div id="messageContainer" class="mt-3"></div>
         <div class="form-container">
-            <button class="close-button">×</button>
             <div class="two-column-layout">
                 <div class="content-column">
                     <div class="form-header">
                         <h1>Become a Brilliant Plus ambassador today</h1>
-                        <p class="subtitle">Already an ambassador? <a href="#" class="highlight-link">Sign in to your dashboard</a></p>
+                        <p class="subtitle">Already an ambassador? <a href="https://team.brilliantplus.app/" class="highlight-link">Sign in to your dashboard</a></p>
                     </div>
                     <!-- Step indicator -->
                     <div class="step-indicator">
@@ -97,22 +96,6 @@
                                 <input type="text" id="province" name="province" required>
                             </div>
                         </div>
-                        <div class="form-group">
-                            <label for="ssn">Social Security Number (for 1099 Tax Form)</label>
-                            <div class="password-input-group">
-                                <input type="password" id="ssn" name="ssn" required 
-                                       pattern="^\d{3}-\d{2}-\d{4}$"
-                                       placeholder="XXX-XX-XXXX"
-                                       maxlength="11"
-                                       autocomplete="off">
-                                <button type="button" class="toggle-password" aria-label="Toggle SSN visibility">
-                                    <svg class="eye-icon" viewBox="0 0 24 24" width="24" height="24">
-                                        <path d="M12 4.5C7 4.5 2.73 7.61 1 12c1.73 4.39 6 7.5 11 7.5s9.27-3.11 11-7.5c-1.73-4.39-6-7.5-11-7.5zM12 17c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5zm0-8c-1.66 0-3 1.34-3 3s1.34 3 3 3 3-1.34 3-3-1.34-3-3-3z"/>
-                                    </svg>
-                                </button>
-                            </div>
-                            <p class="field-hint">Your SSN is required for tax reporting purposes. As a Brilliant Plus ambassador, you'll receive a 1099 form at the end of the year for any earnings over $600. This information is securely stored and encrypted.</p>
-                        </div>
                         <div class="form-group checkbox-group">
                             <label class="checkbox-label">
                                 <input type="checkbox" id="terms" name="terms" required>
@@ -166,10 +149,53 @@
                             </div>
                         </div>
                         <div class="form-buttons">
-                            <button type="button" class="back-button" onclick="showStep(1)">Back</button>
+                            <button type="button" class="back-button">Back</button>
                             <button type="submit" class="submit-button">Create Account</button>
                         </div>
                     </form>
+                </div>
+            </div>
+
+            <!-- Step 3: Thank You Page -->
+            <div class="step-form thank-you-step" data-step="3" style="display: none;">
+                <div class="thank-you-content">
+                    <div class="success-icon">
+                        <svg viewBox="0 0 24 24" width="48" height="48">
+                            <path fill="#54967D" d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"/>
+                        </svg>
+                    </div>
+                    <h2>Welcome to Brilliant Plus!</h2>
+                    <p class="success-message">Your ambassador account has been created successfully.</p>
+                    
+                    <div class="account-details">
+                        <h3>Your Account Information</h3>
+                        <div class="credentials-box">
+                            <div class="credential-item">
+                                <label>Username:</label>
+                                <input type="text" id="finalUsername" readonly>
+                                <button onclick="copyToClipboard('finalUsername')" class="copy-button">Copy</button>
+                            </div>
+                            <div class="credential-item">
+                                <label>Password:</label>
+                                <input type="text" id="finalPassword" readonly>
+                                <button onclick="copyToClipboard('finalPassword')" class="copy-button">Copy</button>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="next-steps">
+                        <h3>Next Steps</h3>
+                        <ul>
+                            <li>Save your login credentials</li>
+                            <li>Check your email for confirmation</li>
+                            <li>Log in to your ambassador dashboard</li>
+                            <li>Complete your profile</li>
+                        </ul>
+                    </div>
+
+                    <div class="action-buttons">
+                        <a href="https://team.brilliantplus.app/" class="submit-button">Login to Your Portal</a>
+                    </div>
                 </div>
             </div>
         </div>
